--- a/infrastructure/2. Ansible/runbook.yml
+++ b/infrastructure/2. Ansible/runbook.yml
@@ -1,6 +1,16 @@
 ---
-- hosts: all
+- hosts: docker_swarm_manager
   tasks:
     - name: Init a new swarm with default parameters
       docker_swarm:
         state: present
+    - name: Ansible register Swarm Join Token for Worker
+      shell: "docker swarm join-token worker -q"
+      register: join_swarm_worker
+- hosts: docker_swarm_worker
+  tasks:
+    - name: Add nodes to new swarm
+      docker_swarm:
+        state: join
+        join_token: "{{ join_swarm_worker }}"
+        remote_addrs: [ '172.27.72.61:2377' ]
