--- a/infrastructure/Config/haproxy.cfg
+++ b/infrastructure/Config/haproxy.cfg
@@ -44,25 +44,18 @@ listen awx
     bind 0.0.0.0:5050
     option httpchk OPTIONS / HTTP/1.0
     http-check expect rstatus (2|3)[0-9][0-9]
-    server MASTER-01 master-01.maf.cloud:5050 check
-    server WORKER-01 worker-01.maf.cloud:5050 check
-    server WORKER-02 worker-02.maf.cloud:5050 check
-    server WORKER-03 worker-03.maf.cloud:5050 check
-    server WORKER-04 worker-04.maf.cloud:5050 check
-    server WORKER-05 worker-05.maf.cloud:5050 check
+    server DOCKER-01 172.27.72.61:5050 check
+    server DOCKER-02 172.27.72.62:5050 check
+    server DOCKER-03 172.27.72.63:5050 check
 
 listen app
     mode http
     bind 0.0.0.0:8080
     option httpchk OPTIONS / HTTP/1.0
     http-check expect rstatus (2|3)[0-9][0-9]
-    server MASTER-01 master-01.maf.cloud:80 check
-    server WORKER-01 worker-01.maf.cloud:80 check
-    server WORKER-02 worker-02.maf.cloud:80 check
-    server WORKER-03 worker-03.maf.cloud:80 check
-    server WORKER-04 worker-04.maf.cloud:80 check
-    server WORKER-05 worker-05.maf.cloud:80 check
-    server OPENSTACK 192.168.0.210:80 check
+    server DOCKER-01 172.27.72.61:50 check
+    server DOCKER-02 172.27.72.62:50 check
+    server DOCKER-03 172.27.72.63:50 check
 
 listen haproxy
     bind 0.0.0.0:1936
