add Loadbalancer provisioning

--- a/infrastructure/Config/haproxy.cfg
+++ b/infrastructure/Config/haproxy.cfg
@@ -39,7 +39,7 @@ backend portainer
     server DOCKER-02 172.27.72.62:9000 check
     server DOCKER-03 172.27.72.63:9000 check
 
-listen awx
+listen app1
     mode tcp
     bind 0.0.0.0:5050
     option httpchk OPTIONS / HTTP/1.0
@@ -48,7 +48,7 @@ listen awx
     server DOCKER-02 172.27.72.62:5050 check
     server DOCKER-03 172.27.72.63:5050 check
 
-listen app
+listen app2
     mode http
     bind 0.0.0.0:8080
     option httpchk OPTIONS / HTTP/1.0
