--- a/infrastructure/Config/haproxy.cfg
+++ b/infrastructure/Config/haproxy.cfg
@@ -22,10 +22,10 @@ frontend http-in
     use_backend portainer if host_portainer
 
 backend awx
+    mode http
     balance leastconn
     option httpclose
     option forwardfor
-    option httpchk OPTIONS / HTTP/1.0
     http-check expect rstatus (0|1)[0-9][0-9]
     server ANSIBLE-AWX 172.27.72.60:80 check
 
