--- a/infrastructure/3. Docker/portainer-agent-stack.yml
+++ b/infrastructure/3. Docker/portainer-agent-stack.yml
@@ -28,6 +28,9 @@ services:
       replicas: 1
       placement:
         constraints: [node.role == manager]
+      labels:
+        - "admin-password=$2y$05$9Vw9X2BC5sM5BRNZ8arAe.4FAoJk8Vxtjd9tQ/8sHEAQ30hdkcKuy"
+        - "logo=https://img.maartenmol.nl/DHS_White%20zonder%20[Converted].png"
 
 networks:
   agent_network:
