--- a/infrastructure/3. Docker/config/ldap.toml
+++ b/infrastructure/3. Docker/config/ldap.toml
@@ -4,7 +4,8 @@ port = 389
 use_ssl = false
 start_tls = false
 ssl_skip_verify = true
-bind_dn = "dhsnext\\%s"
+bind_dn = "cn=administrator,dc=dhsnext,dc=nl"
+bind_password = 'VD!fli9ht'
 search_filter = "(sAMAccountName=%s)"
 search_base_dns = ["dc=dhsnext,dc=nl"]
 
