--- a/infrastructure/3. Docker/config/ldap.toml
+++ b/infrastructure/3. Docker/config/ldap.toml
@@ -4,8 +4,7 @@ port = 389
 use_ssl = false
 start_tls = false
 ssl_skip_verify = true
-bind_dn = "cn=administrator,dc=dhsnext,dc=nl"
-bind_password = 'VD!fli9ht'
+bind_dn = "dhsnext\\%s"
 search_filter = "(sAMAccountName=%s)"
 search_base_dns = ["dc=dhsnext,dc=nl"]
 
@@ -17,6 +16,6 @@ member_of = "memberOf"
 email =  "mail"
 
 [[servers.group_mappings]]
-group_dn = "cn=Administrators,cn=Builtin,dc=maf,dc=local"
+group_dn = "cn=Administrators,cn=Builtin,dc=dhsnext,dc=nl"
 org_role = "Admin"
 grafana_admin = true
