--- a/infrastructure/Config/haproxy.cfg
+++ b/infrastructure/Config/haproxy.cfg
@@ -16,10 +16,14 @@ frontend http-in
     # Define hosts
     acl host_awx hdr(host) -i awx.dhsnext.nl
     acl host_portainer hdr(host) -i portainer.dhsnext.nl
+    acl host_grafana hdr(host) -i grafana.dhsnext.nl
+    acl host_karma hdr(host) -i karma.dhsnext.nl
 
     ## figure out which one to use
     use_backend awx if host_awx
     use_backend portainer if host_portainer
+    use_backend grafana if host_grafana
+    use_backend karma if host_karma
 
 backend awx
     mode http
@@ -39,6 +43,26 @@ backend portainer
     server DOCKER-02 172.27.72.62:9000 check
     server DOCKER-03 172.27.72.63:9000 check
 
+backend grafana
+    balance leastconn
+    option httpclose
+    option forwardfor
+    mode http
+    http-check expect rstatus (2|3)[0-9][0-9]
+    server DOCKER-01 172.27.72.61:3000 check
+    server DOCKER-02 172.27.72.62:3000 check
+    server DOCKER-03 172.27.72.63:3000 check
+
+backend karma
+    balance leastconn
+    option httpclose
+    option forwardfor
+    mode http
+    http-check expect rstatus (2|3)[0-9][0-9]
+    server DOCKER-01 172.27.72.61:8080 check
+    server DOCKER-02 172.27.72.62:8080 check
+    server DOCKER-03 172.27.72.63:8080 check
+
 listen app1
     mode tcp
     bind 0.0.0.0:5050
@@ -56,6 +80,14 @@ listen app2
     server DOCKER-01 172.27.72.61:50 check
     server DOCKER-02 172.27.72.62:50 check
     server DOCKER-03 172.27.72.63:50 check
+
+listen alertmanager
+    mode tcp
+    bind 0.0.0.0:9093
+    http-check expect rstatus (2|3)[0-9][0-9]
+    server DOCKER-01 172.27.72.61:9093 check
+    server DOCKER-02 172.27.72.62:9093 check
+    server DOCKER-03 172.27.72.63:9093 check
 
 listen haproxy
     bind 0.0.0.0:1936
