--- a/infrastructure/3. Docker/config/karma.yaml
+++ b/infrastructure/3. Docker/config/karma.yaml
@@ -2,7 +2,7 @@ alertmanager:
   interval: 10s
   servers:
     - name: PROMETHEUS
-      uri: http://vip.dhsnext.nl/:9093
+      uri: http://vip.dhsnext.nl:9093
       timeout: 30s
       proxy: true
 log:
