--- a/infrastructure/3. Docker/logging.yml
+++ b/infrastructure/3. Docker/logging.yml
@@ -22,7 +22,7 @@ volumes:
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch::7.6.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
     configs:
       - source: elasticsearch
         target: /usr/share/elasticsearch/config/elasticsearch.yml
