add filebeats & syslog

--- a/infrastructure/Config/haproxy.cfg
+++ b/infrastructure/Config/haproxy.cfg
@@ -18,12 +18,14 @@ frontend http-in
     acl host_portainer hdr(host) -i portainer.dhsnext.nl
     acl host_grafana hdr(host) -i grafana.dhsnext.nl
     acl host_karma hdr(host) -i karma.dhsnext.nl
+    acl host_kibana hdr(host) -i kibana.dhsnext.nl
 
     ## figure out which one to use
     use_backend awx if host_awx
     use_backend portainer if host_portainer
     use_backend grafana if host_grafana
     use_backend karma if host_karma
+    use_backend kibana if host_kibana
 
 backend awx
     mode http
@@ -63,6 +65,16 @@ backend karma
     server DOCKER-02 172.27.72.62:8080 check
     server DOCKER-03 172.27.72.63:8080 check
 
+backend kibana
+    balance leastconn
+    option httpclose
+    option forwardfor
+    mode http
+    http-check expect rstatus (2|3)[0-9][0-9]
+    server DOCKER-01 172.27.72.61:5601 check
+    server DOCKER-02 172.27.72.62:5601 check
+    server DOCKER-03 172.27.72.63:5601 check
+
 listen app1
     mode tcp
     bind 0.0.0.0:5050
@@ -88,6 +100,20 @@ listen alertmanager
     server DOCKER-01 172.27.72.61:9093 check
     server DOCKER-02 172.27.72.62:9093 check
     server DOCKER-03 172.27.72.63:9093 check
+
+listen filebeats
+    mode tcp
+    bind 0.0.0.0:5044
+    server DOCKER-01 172.27.72.61:5044 check
+    server DOCKER-02 172.27.72.62:5044 check
+    server DOCKER-03 172.27.72.63:5044 check
+
+listen syslog
+    mode tcp
+    bind 0.0.0.0:5000
+    server DOCKER-01 172.27.72.61:5000 check
+    server DOCKER-02 172.27.72.62:5000 check
+    server DOCKER-03 172.27.72.63:5000 check
 
 listen haproxy
     bind 0.0.0.0:1936
