--- a/infrastructure/3. Docker/config/logstash-pipeline.conf
+++ b/infrastructure/3. Docker/config/logstash-pipeline.conf
@@ -1,33 +1,41 @@
 input {
   beats {
     port => 5044
-    tags => [ "beats" ]
-  }
-  syslog {
-    port => 8514
-    tags => [ "syslog" ]
   }
   tcp {
-	port => 5000
+    port => 5000
+    type => syslog
+  }
+  udp {
+    port => 5000
+    type => syslog
   }
 }
 
 filter {
-  # Beats define [host] as an object, but some inputs may send it as a string.
-  # https://github.com/logstash-plugins/logstash-input-syslog/issues/51
-  if [host] and ! [host][name] {
-    mutate {
-      rename => { "host" => "hostname" }
-    }
-  }
-
   if "kibana" in [docker.container.name] {
 	  drop {}
 	}
+  # Beats define [host] as an object, but some inputs may send it as a string.
+  # https://github.com/logstash-plugins/logstash-input-syslog/issues/51
+  # if [host] and ! [host][name] {
+  #   mutate {
+  #     rename => { "host" => "hostname" }
+  #   }
+  # }
+  if [type] == "syslog" {
+    grok {
+      match => { "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}" }
+      add_field => [ "received_at", "%{@timestamp}" ]
+      add_field => [ "received_from", "%{host}" ]
+    }
+    date {
+      match => [ "syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss" ]
+    }
+  }
 }
 
 output {
-  elasticsearch {
-    hosts => ["elasticsearch:9200"]
-  }
+  elasticsearch { hosts => ["elasticsearch:9200"] }
+  stdout { codec => rubydebug }
 }
