--- a/infrastructure/3. Docker/config/filebeat.yml
+++ b/infrastructure/3. Docker/config/filebeat.yml
@@ -1,94 +1,45 @@
-#==========================  Modules configuration =============================
-filebeat.modules:
+# https://github.com/elastic/beats/blob/master/filebeat/filebeat.reference.yml
 
-#------------------------------- System Module -------------------------------
+filebeat.modules:
 - module: system
-  # Syslog
   syslog:
     enabled: true
-    var.paths: ["/var/log/messages*"]
   auth:
     enabled: true
-    var.paths: ["/var/log/secure*"]
-
-#------------------------------- Auditd Module -------------------------------
-# Does not look like Auditd is supported in Alpine linux:
-# https://github.com/linuxkit/linuxkit/issues/52
 - module: auditd
   log:
-    enabled: true
+    # Does not look like Auditd is supported in Alpine linux: https://github.com/linuxkit/linuxkit/issues/52
+    enabled: false
 
-#========================== Filebeat autodiscover ==============================
-# Autodiscover allows you to detect changes in the system and spawn new modules or inputs as they happen.
-filebeat.autodiscover:
-# Autodiscover docker containers and parse logs
-  providers:
-    - type: docker
-      templates:
-          config:
-            - type: docker
-              containers.ids:
-                - "${data.docker.container.id}"
-
-#=========================== Filebeat inputs ==============================
 filebeat.inputs:
-#------------------------------ Docker input --------------------------------
 - type: docker
   enabled: true
-  containers.ids:
-    - "*"
-  paths:
-    - /var/lib/docker/containers/${data.docker.container.id}/*.log
-  # json.message_key: log
-  # json.add_error_key: true
-  # json.keys_under_root: true
-  exclude_lines: ["^\\s+[\\-`('.|_]"]  # drop asciiart lines
-  multiline.pattern: "^\t|^[[:space:]]+(at|...)|^Caused by:"
-  multiline.match: after
-  processors:
-    - add_docker_metadata: ~
-    - add_cloud_metadata: ~
-    - add_locale: ~
+  containers:
+    stream: all # can be all, stdout or stderr
+    ids:
+      - '*'
+  # exclude_lines: ["^\\s+[\\-`('.|_]"]  # drop asciiart lines
+  # multiline.pattern: "^\t|^[[:space:]]+(at|...)|^Caused by:"
+  # multiline.match: after
 
-#------------------------------ Log input --------------------------------
-# - type: log
-#   enabled: true
-#   paths:
-#     - '/var/lib/docker/containers/*/*.log'
-#   json.message_key: log
-#   json.add_error_key: true
-#   json.keys_under_root: true
-#   processors:
-#     - add_docker_metadata: ~
-#     - add_cloud_metadata: ~
-#     - add_locale: ~
-#   multiline.pattern: "^\t|^[[:space:]]+(at|...)|^Caused by:"
-#   multiline.match: after
-#
-# - type: log
-#   enabled: false
-#   paths:
-#     # path to jenkins build logs
-#     - /var/lib/docker/volumes/jenkins_home/_data/jobs/*/builds/*/log
-#   json.message_key: log
-#   json.add_error_key: true
-#   json.keys_under_root: true
-#   multiline.pattern: '^[[:space:]]+|^Caused by:'
-#   multiline.negate: false
-#   multiline.match: after
+#========================== Filebeat autodiscover ==============================
+# See this URL on how to run Apache2 Filebeat module: # https://www.elastic.co/guide/en/beats/filebeat/current/running-on-docker.html
+filebeat.autodiscover:
+  providers:
+    - type: docker
+      # https://www.elastic.co/guide/en/beats/filebeat/current/configuration-autodiscover-hints.html
+      # This URL alos contains instructions on multi-line logs
+      hints.enabled: true
 
-#========================== Elasticsearch output ===============================
-# output.elasticsearch:
-#   hosts: ["amsterdam_elasticsearch:9200"]
+#================================ Processors ===================================
+processors:
+- add_cloud_metadata: ~
+- add_docker_metadata: ~
+- add_locale:
+    format: offset
+- add_host_metadata:
+    netinfo.enabled: true
 
 #----------------------------- Logstash output --------------------------------
 output.logstash:
   hosts: ["logstash:5044"]
-
-#============================== Dashboards =====================================
-# setup.dashboards:
-#   enabled: true
-# setup.kibana:
-#   host: "${KIBANA_HOST}:80"
-#   username: ${ELASTICSEARCH_USERNAME}
-#   password: ${ELASTICSEARCH_PASSWORD}
