pre define endpoints

--- a/infrastructure/3. Docker/portainer-agent-stack.yml
+++ b/infrastructure/3. Docker/portainer-agent-stack.yml
@@ -16,6 +16,9 @@ services:
   portainer:
     image: portainer/portainer
     command: -H tcp://tasks.agent:9001 --tlsskipverify
+    configs:
+      - source: endpoints
+        target: /endpoints/endpoints.json
     ports:
       - "9000:9000"
       - "8000:8000"
@@ -31,6 +34,11 @@ services:
       labels:
         - "admin-password=$2y$05$9Vw9X2BC5sM5BRNZ8arAe.4FAoJk8Vxtjd9tQ/8sHEAQ30hdkcKuy"
         - "logo=https://img.maartenmol.nl/DHS_White%20zonder%20[Converted].png"
+        - "external-endpoints=/endpoints/endpoints.json"
+
+configs:
+  endpoints:
+    file: ./config/endpoints.json
 
 networks:
   agent_network:
