--- a/infrastructure/2. Ansible/runbook.yml
+++ b/infrastructure/2. Ansible/runbook.yml
@@ -26,4 +26,16 @@
         state: present
         name: portainer
         compose:
-          - ~/dhs-config/infrastructure/3. Docker/portainer-agent-stack.yml
+          - ~/dhs-config/infrastructure/3. Docker/portainer.yml
+    - name: Deploy Monitoring
+      docker_stack:
+        state: present
+        name: monitoring
+        compose:
+          - ~/dhs-config/infrastructure/3. Docker/monitoring.yml
+    - name: Deploy Logging
+      docker_stack:
+        state: present
+        name: logging
+        compose:
+          - ~/dhs-config/infrastructure/3. Docker/logging.yml
