--- a/infrastructure/3. Docker/config/prometheus.yml
+++ b/infrastructure/3. Docker/config/prometheus.yml
@@ -61,6 +61,19 @@ scrape_configs:
         replacement: '$1'
         target_label: instance
 
+  - job_name: 'vmware_vcenter'
+    metrics_path: '/metrics'
+    static_configs:
+      - targets:
+        - 'dhsnext-vc-01.dhsnext.nl'
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: localhost:9272
+
   # - job_name: haproxy
   #   scrape_interval: 60s
   #   dns_sd_configs:
