--- a/infrastructure/3. Docker/config/prometheus.yml
+++ b/infrastructure/3. Docker/config/prometheus.yml
@@ -65,14 +65,14 @@ scrape_configs:
     metrics_path: '/metrics'
     static_configs:
       - targets:
-        - '172.27.72.3'
+        - 'dhsnext-vc-01.dhsnext.nl'
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: localhost:9272
+        replacement: vmware_exporter:9272
 
   # - job_name: haproxy
   #   scrape_interval: 60s
