--- a/infrastructure/3. Docker/config/prometheus.yml
+++ b/infrastructure/3. Docker/config/prometheus.yml
@@ -48,12 +48,12 @@ scrape_configs:
 
   - job_name: 'node-exporter'
     static_configs:
-      - targets: ['172.27.72.60:9100']
-    dns_sd_configs:
-    - names:
-      - 'tasks.node-exporter'
-      type: 'A'
-      port: 9100
+      - targets: ['172.27.72.60:9100','172.27.72.61:9100','172.27.72.62:9100','172.27.72.63:9100','172.27.72.65:9100','172.27.72.66:9100']
+    # dns_sd_configs:
+    # - names:
+    #   - 'tasks.node-exporter'
+    #   type: 'A'
+    #   port: 9100
     relabel_configs:
       - source_labels: [__address__]
         separator: ':'
