--- a/infrastructure/2. Ansible/runbook.yml
+++ b/infrastructure/2. Ansible/runbook.yml
@@ -205,26 +205,32 @@
       shell: docker exec awx_web bash -l -c "curl https://raw.githubusercontent.com/MaartenMol/dhs-awx/master/awx/ui/client/assets/favicon.ico > /var/lib/awx/public/static/assets/favicon.ico"
 
 - name: Setup Swarm Cluster
-  hosts: dockers
+  hosts: docker_swarm_manager
   gather_facts: no
   tasks:
     - name: Init a new swarm with default parameters
-      delegate_to: docker-01
       docker_swarm:
         state: present
     - name: Ansible register Swarm Join Token for Worker
-      delegate_to: docker-01
       shell: "docker swarm join-token worker -q"
       register: join_swarm_worker
+    - name: "Setting Swarm token as a fact"
+      set_fact:
+        join_token_swarm: "{{ join_swarm_worker.stdout }}"
+      changed_when: false
+      check_mode: false
+    - set_stats:
+      data:
+        other_stat: "{{ join_swarm_worker.stdout }}"
+
+- name: Add workers to Swarm cluster
+  hosts: docker_swarm_worker
+  tasks:
     - name: Add nodes to new swarm
-      delegate_to: "{{ item}}"
-      with_items:
-        - docker-02
-        - docker-03
       docker_swarm:
         state: join
         advertise_addr: ""
-        join_token: "{{ join_swarm_worker.stdout }}"
+        join_token: "{{ join_token_swarm }}"
         remote_addrs: [ '172.27.72.61:2377' ]
 
 - name: Deploy Swarm Stacks
