--- a/infrastructure/2. Ansible/runbook.yml
+++ b/infrastructure/2. Ansible/runbook.yml
@@ -213,14 +213,15 @@
     - name: Ansible register Swarm Join Token for Worker
       shell: "docker swarm join-token worker -q"
       register: join_swarm_worker
-    - name: "Setting Swarm token as a fact"
+    - name: Setting Swarm token as a fact
       set_fact:
         join_token_swarm: "{{ join_swarm_worker.stdout }}"
       changed_when: false
       check_mode: false
-    - set_stats:
-      data:
-        other_stat: "{{ join_swarm_worker.stdout }}"
+    - name: Setting Swarm token as stats
+      set_stats:
+        data:
+          other_stat: "{{ join_swarm_worker.stdout }}"
 
 - name: Add workers to Swarm cluster
   hosts: docker_swarm_worker
