--- a/infrastructure/2. Ansible/runbook.yml
+++ b/infrastructure/2. Ansible/runbook.yml
@@ -209,15 +209,6 @@
     - name: Ansible register Swarm Join Token for Worker
       shell: "docker swarm join-token worker -q"
       register: join_swarm_worker
-    - name: Setting Swarm token as a fact
-      set_fact:
-        join_token_swarm: "{{ join_swarm_worker.stdout }}"
-      changed_when: false
-      check_mode: false
-    - name: Setting Swarm token as stats
-      set_stats:
-        data:
-          other_stat: "{{ join_swarm_worker.stdout }}"
 
 - name: Add workers to Swarm cluster
   hosts: docker_swarm_worker
@@ -226,28 +217,32 @@
       docker_swarm:
         state: join
         advertise_addr: ""
-        join_token: "{{ join_token_swarm }}"
+        join_token: "{{ hostvars['docker-01']['join_swarm_worker']['stdout'] }}"
         remote_addrs: [ '172.27.72.61:2377' ]
 
 - name: Deploy Swarm Stacks
   hosts: docker_swarm_manager
   gather_facts: no
   tasks:
+    - name: GIT Clone DHS Config
+      git:
+        repo: 'https://github.com/MaartenMol/dhs-config.git'
+        dest: /root/dhs-config
     - name: Deploy Portainer
       docker_stack:
         state: present
         name: portainer
         compose:
-          - ~/dhs-config/infrastructure/3. Docker/portainer.yml
+          - /root/dhs-config/infrastructure/3. Docker/portainer.yml
     - name: Deploy Monitoring
       docker_stack:
         state: present
         name: monitoring
         compose:
-          - ~/dhs-config/infrastructure/3. Docker/monitoring.yml
+          - /root/dhs-config/infrastructure/3. Docker/monitoring.yml
     - name: Deploy Logging
       docker_stack:
         state: present
         name: logging
         compose:
-          - ~/dhs-config/infrastructure/3. Docker/logging.yml
+          - /root/dhs-config/infrastructure/3. Docker/logging.yml
