add nexus pools

--- a/infrastructure/Config/haproxy.cfg
+++ b/infrastructure/Config/haproxy.cfg
@@ -19,6 +19,7 @@ frontend http-in
     acl host_grafana hdr(host) -i grafana.dhsnext.nl
     acl host_karma hdr(host) -i karma.dhsnext.nl
     acl host_kibana hdr(host) -i kibana.dhsnext.nl
+    acl host_nexus hdr(host) -i nexus.dhsnext.nl
 
     ## figure out which one to use
     use_backend awx if host_awx
@@ -26,6 +27,7 @@ frontend http-in
     use_backend grafana if host_grafana
     use_backend karma if host_karma
     use_backend kibana if host_kibana
+    use_backend nexus if host_nexus
 
 backend awx
     mode http
@@ -74,6 +76,16 @@ backend kibana
     server DOCKER-01 172.27.72.61:5601 check
     server DOCKER-02 172.27.72.62:5601 check
     server DOCKER-03 172.27.72.63:5601 check
+
+backend nexus
+    balance leastconn
+    option httpclose
+    option forwardfor
+    mode http
+    http-check expect rstatus (2|3)[0-9][0-9]
+    server DOCKER-01 172.27.72.61:8081 check
+    server DOCKER-02 172.27.72.62:8081 check
+    server DOCKER-03 172.27.72.63:8081 check
 
 listen app1
     mode tcp
