--- a/infrastructure/3. Docker/config/prometheus.yml
+++ b/infrastructure/3. Docker/config/prometheus.yml
@@ -61,6 +61,19 @@ scrape_configs:
         replacement: '$1'
         target_label: instance
 
+  - job_name: 'nexus-exporter'
+    dns_sd_configs:
+    - names:
+      - 'tasks.nexus_exporter'
+      type: 'A'
+      port: 9184
+    relabel_configs:
+      - source_labels: [__address__]
+        separator: ':'
+        regex: '(.*):(.*)'
+        replacement: '$1'
+        target_label: instance
+
   - job_name: 'vmware_vcenter'
     metrics_path: '/metrics'
     static_configs:
