--- a/infrastructure/3. Docker/logging.yml
+++ b/infrastructure/3. Docker/logging.yml
@@ -18,7 +18,11 @@ configs:
     file: ./config/filebeat.yml
 
 volumes:
-    elasticsearch: {}
+    elasticsearch:
+      driver_opts:
+      type: "nfs"
+      o: "addr=172.27.72.20,nolock,rw"
+      device: ":/mnt/POOL-01/DOCKERVOLS/elasticsearch"
 
 services:
   elasticsearch:
