--- a/infrastructure/3. Docker/gitlab.yml
+++ b/infrastructure/3. Docker/gitlab.yml
@@ -115,9 +115,9 @@ services:
       - LDAP_UID=sAMAccountName
       - LDAP_METHOD=plain
       - LDAP_ACTIVE_DIRECTORY=true
-      - LDAP_BIND_DN=CN=administrator,OU=Users,DC=dhsnext,DC=nl
+      - LDAP_BIND_DN=CN=Administrator,OU=Users,DC=dhsnext,DC=nl
       - LDAP_PASS=VD!fli9ht
-      - LDAP_BASE=dc=dhsnext,dc=nl
+      - LDAP_BASE=OU=Users,DC=dhsnext,DC=nl
       - LDAP_LOWERCASE_USERNAMES=true
     deploy:
       mode: replicated
