--- a/infrastructure/3. Docker/config/prometheus.yml
+++ b/infrastructure/3. Docker/config/prometheus.yml
@@ -33,7 +33,7 @@ scrape_configs:
 
   - job_name: cadvisor
     static_configs:
-      - targets: ['172.27.72.60:8080']
+      - targets: ['ANSIBLE-AWX:8080']
     dns_sd_configs:
     - names:
       - 'tasks.cadvisor'
@@ -48,7 +48,7 @@ scrape_configs:
 
   - job_name: 'node-exporter'
     static_configs:
-      - targets: ['172.27.72.60:9100','172.27.72.61:9100','172.27.72.62:9100','172.27.72.63:9100','172.27.72.65:9100','172.27.72.66:9100']
+      - targets: ['ANSIBLE-AWX:9100','DOCKER-01:9100','DOCKER-02:9100','DOCKER-03:9100','LB-01:9100','LB-02:9100']
     # dns_sd_configs:
     # - names:
     #   - 'tasks.node-exporter'
