--- a/infrastructure/3. Docker/gitlab.yml
+++ b/infrastructure/3. Docker/gitlab.yml
@@ -112,10 +112,10 @@ services:
       - LDAP_LABEL=DHSNEXT
       - LDAP_HOST=172.27.72.4
       - LDAP_PORT=389
-      - LDAP_UID=sAMAccountName=
+      - LDAP_UID=sAMAccountName
       - LDAP_METHOD=plain
       - LDAP_ACTIVE_DIRECTORY=true
-      - LDAP_BIND_DN=CN=Administrator,CN=Users,DC=dhsnext,DC=local
+      - LDAP_BIND_DN=administrator@dhsnext.nl
       - LDAP_PASS=VD!fli9ht
       - LDAP_BASE=DC=dhsnext,DC=local
       - LDAP_LOWERCASE_USERNAMES=true
