--- a/infrastructure/3. Docker/gitlab.yml
+++ b/infrastructure/3. Docker/gitlab.yml
@@ -121,6 +121,7 @@ services:
       - LDAP_LOWERCASE_USERNAMES=true
       - LDAP_ALLOW_USERNAME_OR_EMAIL_LOGIN=true
       - LDAP_USER_ATTRIBUTE_USERNAME=['uid', 'sAMAccountName']
+      - LDAP_USER_FILTER=(memberOf=CN=GIT,OU=Groups,DC=dhsnext,DC=nl)
     deploy:
       mode: replicated
       replicas: 1
