--- a/infrastructure/Config/haproxy.cfg
+++ b/infrastructure/Config/haproxy.cfg
@@ -20,6 +20,8 @@ frontend http-in
     acl host_karma hdr(host) -i karma.dhsnext.nl
     acl host_kibana hdr(host) -i kibana.dhsnext.nl
     acl host_nexus hdr(host) -i nexus.dhsnext.nl
+    acl host_gitlab hdr(host) -i gitlab.dhsnext.nl
+    acl host_gitlab_ssh hdr(host) -i ssh.gitlab.dhsnext.nl
 
     ## figure out which one to use
     use_backend awx if host_awx
@@ -28,6 +30,8 @@ frontend http-in
     use_backend karma if host_karma
     use_backend kibana if host_kibana
     use_backend nexus if host_nexus
+    use_backend gitlab if host_gitlab
+    use_backend gitlab_ssh if host_gitlab_ssh
 
 backend awx
     mode http
@@ -86,6 +90,23 @@ backend nexus
     server DOCKER-01 172.27.72.61:8081 check
     server DOCKER-02 172.27.72.62:8081 check
     server DOCKER-03 172.27.72.63:8081 check
+
+backend gitlab
+    balance leastconn
+    option httpclose
+    option forwardfor
+    mode http
+    http-check expect rstatus (2|3)[0-9][0-9]
+    server DOCKER-01 172.27.72.61:10080 check
+    server DOCKER-02 172.27.72.62:10080 check
+    server DOCKER-03 172.27.72.63:10080 check
+
+backend gitlab_ssh
+    balance leastconn
+    mode tcp
+    server DOCKER-01 172.27.72.61:10022 check
+    server DOCKER-02 172.27.72.62:10022 check
+    server DOCKER-03 172.27.72.63:10022 check
 
 listen app1
     mode tcp
