--- a/infrastructure/3. Docker/guacamole.yml
+++ b/infrastructure/3. Docker/guacamole.yml
@@ -14,12 +14,12 @@ volumes:
 
 services:
   postgres:
-    image: sameersbn/postgresql:10-2
+    image: postgres:11
     environment:
-      - DB_USER=guacamole
-      - DB_PASS=foxtrottango
-      - DB_NAME=guacamole_db
-      - DB_EXTENSION=pg_trgm
+      PGDATA: /var/lib/postgresql/data/guacamole
+      POSTGRES_DB: guacamole_db
+      POSTGRES_PASSWORD: P@ssword
+      POSTGRES_USER: guacamole_user
     deploy:
       mode: replicated
       replicas: 1
@@ -72,12 +72,11 @@ services:
         reservations:
           memory: 128M
     environment:
-      - POSTGRES_HOSTNAME=postgres
-      - POSTGRES_PORT=5432
-      - POSTGRES_DATABASE=guacamole_db
-      - POSTGRES_USER=guacamole
-      - POSTGRES_PASSWORD=foxtrottango
-      - GUACD_HOSTNAME=guacd
+      GUACD_HOSTNAME: guacd
+      POSTGRES_DATABASE: guacamole_db
+      POSTGRES_HOSTNAME: postgres
+      POSTGRES_PASSWORD: P@ssword
+      POSTGRES_USER: guacamole_user
     networks:
       - net
     ports:
